--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;400;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Readex+Pro:wght@200;300;400;500;600;700&family=Nanum+Gothic+Coding&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+
+  <nav>
+    <span>
+      <i class="fa-brands fa-github-square"></i> Github Repo
+    </span>
+  </nav>
+
+  <main>
+    <div class="URLInput">
+      <i class="fa-solid fa-arrows-split-up-and-left"></i>
+      <input type="text">
+    </div>
+    <button>Generate URL</button>
+  </main>
+
+  <footer>
+    Developed by <a src="https://github.com/Wonkers0">Wonk</a>
+  </footer>
+  
+  <script src="script.js"></script>
+  <script defer src="https://kit.fontawesome.com/1fc4046318.js"></script>
+</body>
+
+</html>
