--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
 <body>
 
   <nav>
-    <span>
+    <span class="github">
       <i class="fa-brands fa-github-square"></i> Github Repo
     </span>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="navWave"><path fill="#ebebeb" fill-opacity="1" d="M0,128L0,256L40,256L40,128L80,128L80,128L120,128L120,128L160,128L160,128L200,128L200,320L240,320L240,128L280,128L280,192L320,192L320,32L360,32L360,32L400,32L400,128L440,128L440,256L480,256L480,224L520,224L520,160L560,160L560,0L600,0L600,320L640,320L640,288L680,288L680,96L720,96L720,288L760,288L760,320L800,320L800,160L840,160L840,224L880,224L880,128L920,128L920,32L960,32L960,160L1000,160L1000,320L1040,320L1040,96L1080,96L1080,192L1120,192L1120,192L1160,192L1160,64L1200,64L1200,224L1240,224L1240,224L1280,224L1280,192L1320,192L1320,288L1360,288L1360,224L1400,224L1400,32L1440,32L1440,320L1400,320L1400,320L1360,320L1360,320L1320,320L1320,320L1280,320L1280,320L1240,320L1240,320L1200,320L1200,320L1160,320L1160,320L1120,320L1120,320L1080,320L1080,320L1040,320L1040,320L1000,320L1000,320L960,320L960,320L920,320L920,320L880,320L880,320L840,320L840,320L800,320L800,320L760,320L760,320L720,320L720,320L680,320L680,320L640,320L640,320L600,320L600,320L560,320L560,320L520,320L520,320L480,320L480,320L440,320L440,320L400,320L400,320L360,320L360,320L320,320L320,320L280,320L280,320L240,320L240,320L200,320L200,320L160,320L160,320L120,320L120,320L80,320L80,320L40,320L40,320L0,320L0,320Z"></path></svg>
   </nav>
 
   <main>
-    <div class="URLInput">
-      <i class="fa-solid fa-arrows-split-up-and-left"></i>
-      <input type="text">
-    </div>
-    <button>Generate URL</button>
+    <h1>Any image on karel, right <span class="gradientText">NOW</span></h1>
+    <i class="fa-solid fa-arrow-down mainArrow"></i>
+    <img src="karel.png" class="karel">
+    <button>Paste Image URL</button>
   </main>
 
   <footer>
-    Developed by <a src="https://github.com/Wonkers0">Wonk</a>
+    <span class="creditTitle">Developed by <a href="https://github.com/Wonkers0">David</a></span>
+    <span class="creditSub">Check out my other projects!</span>
+    
   </footer>
   
   <script src="script.js"></script>
