--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     <i class="fa-solid fa-arrow-down mainArrow"></i>
     <img src="karel.png" class="karel">
     <button>Paste Image URL</button>
+    <div class="inputWrapper">
+      <input type="number" id="width" placeholder="Width" class="smallInput" oninput="input()">
+      <div class="checkboxWrapper">
+        <input type="checkbox" class="useCustomProps">
+        <p class="checkboxSubtitle">Generate Size Props</p>
+      </div>
+      <input type="number" id="height" placeholder="Height" class="smallInput" oninput="input()">
+    </div>
   </main>
 
   <footer>
