--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
     <img src="karel.png" class="karel">
     <button>Paste Image URL</button>
     <div class="inputWrapper">
-      <input type="number" id="width" placeholder="Width" class="smallInput" oninput="input()">
+      <input type="number" id="width" placeholder="Width" class="smallInput" oninput="checkInput(this)">
       <div class="checkboxWrapper">
         <input type="checkbox" class="useCustomProps">
         <p class="checkboxSubtitle">Generate Size Props</p>
       </div>
-      <input type="number" id="height" placeholder="Height" class="smallInput" oninput="input()">
+      <input type="number" id="height" placeholder="Height" class="smallInput" oninput="checkInput(this)">
     </div>
   </main>
 
   <footer>
     <span class="creditTitle">Developed by <a href="https://github.com/Wonkers0">David</a></span>
     <span class="creditSub">Check out my other projects!</span>
-    
+    <div class="projectsWrapper">
+      <img src="spigotDF.png" class="footerProj" onclick="window.location.href = 'https://wonkers0.github.io/DFSpigot/website/index.html'">
+    </div>
   </footer>
   
   <script src="script.js"></script>
