Updated Footer URL

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <span class="creditTitle">Developed by <a href="https://github.com/Wonkers0">David</a></span>
     <span class="creditSub">Check out my other projects!</span>
     <div class="projectsWrapper">
-      <img src="spigotDF.png" class="footerProj" onclick="window.location.href = 'https://wonkers0.github.io/DFSpigot/website/index.html'">
+      <img src="spigotDF.png" class="footerProj" onclick="window.location.href = 'https://wonkers0.github.io/DFSpigot/'">
     </div>
   </footer>
   
